--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,25 @@
 // Specific CSS for your home-page
+body {
+  text-align: center;
+  background-color: #E0FBFC;
+}
+
+img {
+  width: 125px;
+  height: auto;
+  margin: 20px 0;
+}
+
+h1 {
+  color: #3D5A80;
+  size: 48;
+}
+
+p {
+  color: #98C1D9;
+  margin-bottom: 40px;
+}
+
+#landing {
+  margin-top: 150px;
+}
