--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,12 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+  <div class="row justify-content-center" id="landing">
+    <div class="col-6 d-flex justify-content-center flex-column align-items-center">
+      <%= image_tag "paw" %>
+      <div class="tagline">
+        <h1>PetHub</h1>
+        <p>Share the love!</p>
+      </div>
+      <a class="btn btn-flat" href="#">Learn More</a>
+    </div>
+  </div>
+</div>
