--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,2 +1,21 @@
 <h1>Pets#index</h1>
 <p>Find me in app/views/pets/index.html.erb</p>
+
+<div class="container">
+  <div class="cards">
+    <% @pets.each do |pet| %>
+      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+        <div class="card-trip">
+          <img src="https://source.unsplash.com/random" />
+          <div class="card-trip-infos">
+            <div>
+                <h2><%= pet.name %></h2>
+                <p><%= pet.description %></p>
+            </div>
+            <h2 class="card-trip-pricing">£99.99</h2>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
