--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,9 +1,11 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #FD1015;
+$red: #F05132;
+$pink: #F7A1A1;
 $blue: #167FFB;
-$yellow: #FFC65A;
+$yellow: #FFD04E;
+$white-pink: #FFEEE5;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
