--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row justify-content-center" id="landing">
-    <div class="col-6 d-flex justify-content-center flex-column align-items-center">
+    <div class="landing col-6 d-flex justify-content-center flex-column align-items-center">
       <%= image_tag "paw" %>
       <div class="tagline">
         <h1>PetHub</h1>
