--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,5 +1,4 @@
-<h1>Pets#index</h1>
-<p>Find me in app/views/pets/index.html.erb</p>
+<h1>Pets</h1>
 
 <div class="container">
   <div class="cards">
