booking controller, edit and new views created. destroy method done

--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="cards">
     <% @pets.each do |pet| %>
-      <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
+      <div class="card-category card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
         <div class="card-trip">
           <img src="https://source.unsplash.com/random" />
           <div class="card-trip-infos">
