--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [@pet, @booking]  do |f|%>
+<%= simple_form_for @booking do |f|%>
   <%= f.input :start_date %>
   <%= f.input :end_date %>
   <%= f.submit "Submit Request", class: "btn btn-primary" %>
