--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,5 +1,2 @@
-<%= simple_form_for @booking do |f|%>
-  <%= f.input :start_date %>
-  <%= f.input :end_date %>
-  <%= f.submit "Submit Request", class: "btn btn-primary" %>
-<%end%>
+<h1>Edit Bookings</h1>
+<%= render "form" %>
