--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,5 +1,2 @@
-<%= simple_form_for [@pet, @booking]  do |f|%>
-  <%= f.input :start_date %>
-  <%= f.input :end_date %>
-  <%= f.submit "Submit Request", class: "btn btn-primary" %>
-<%end%>
+<h1>Make Bookings</h1>
+<%= render "form" %>
