forms for edit and new created

--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Edit Bookings</h1>
-<%= render "form" %>
+<h1>Edit Booking</h1>
+<%= simple_form_for @booking do |f|%>
+  <%= f.input :start_date %>
+  <%= f.input :end_date %>
+  <%= f.submit "Submit Request", class: "btn btn-primary" %>
+<%end%>
