--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -5,6 +5,11 @@
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   transition: all .2s ease-in-out;
+  border-radius: 8px;
+}
+
+.card-category {
+  border-radius: 8px;
 }
 
 .card-category a {
@@ -54,6 +59,7 @@
   width: 400px;
   height: 500px;
   position: relative;
+  margin-right: 100px;
 }
 
 .fancy-card {
@@ -163,8 +169,6 @@
   transition-delay: 0.4s;
 }
 
-/**** Personal Details ****/
-
 .details {
   position: absolute;
   bottom: 0;
@@ -227,6 +231,7 @@
   align-items: center;
   margin: 20px;
   transition: all .2s ease-in-out;
+  border-radius: 8px;
 }
 
 .card-product:hover {
@@ -234,10 +239,7 @@
 }
 
 .card-product .icon-box {
-  // height: 100%;
-  // width: 120px;
-  // object-fit: cover;
-  padding: 8px 0 8px 16px;
+  padding: 8px 0 8px 24px;
 }
 
 .card-product h2 {
@@ -261,6 +263,7 @@
 .pet-details-cards {
   display: flex;
   flex-direction: column;
+  padding-top: 20px;
 }
 
 .top-cards {
@@ -271,9 +274,18 @@
 .top-card {
   display: flex;
   flex-direction: column;
-  width: 400px;
-  height: auto;
+  justify-content: space-between;
+  width: 50%;
+  height: 250px;
   .icon-box {
     padding-left: 0;
+    padding-top: 30px;
   }
+  .card-product-infos {
+    padding-bottom: 30px;
+  }
+}
+
+.booking-form-card {
+  border-radius: 8px;
 }
