--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,11 @@
 <div class="container position-relative">
   <div class="aboutus"></div>
-  <%= link_to pets_index_path do%>
+  <%= link_to pets_path do%>
   <div class="entrance"></div>
   <% end %>
   <div class="contact"></div>
     <div class="background-building"></div>
+  </div>
   <div class="clock-block">
     <div class="clock">
       <div class="wrap">
@@ -14,7 +15,6 @@
         <span class="dot"></span>
       </div>
     </div>
-</div>
   </div>
 <script>
 var inc = 1000;
