pets_index_path changed to pets_path

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container position-relative">
   <div class="aboutus"></div>
-  <%= link_to pets_index_path do%>
+  <%= link_to pets_path do%>
   <div class="entrance"></div>
   <% end %>
   <div class="contact"></div>
