--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -1,6 +1,6 @@
 <h1>Make Bookings</h1>
 <%= simple_form_for [@pet, @booking] do |f|%>
-  <%= f.input :start_date %>
-  <%= f.input :end_date %>
+  <%= f.input :start_date, as: :date, html5: true %>
+  <%= f.input :end_date, as: :date, html5: true  %>
   <%= f.submit "Submit Request", class: "btn btn-primary" %>
 <%end%>
