--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit Booking</h1>
 <%= simple_form_for @booking do |f|%>
-  <%= f.input :start_date %>
-  <%= f.input :end_date %>
+  <%= f.input :start_date, as: :date, html5: true %>
+  <%= f.input :end_date, as: :date, html5: true %>
   <%= f.submit "Submit Request", class: "btn btn-primary" %>
 <%end%>
