bootstrap added to form

--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -1,4 +1,4 @@
-<h1>Make Bookings</h1>
+<h1>Make Booking</h1>
 <%= simple_form_for [@pet, @booking] do |f|%>
   <%= f.input :start_date, as: :date, html5: true %>
   <%= f.input :end_date, as: :date, html5: true  %>
