--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,6 +1,11 @@
-<h1>Edit Booking</h1>
-<%= simple_form_for @booking do |f|%>
-  <%= f.input :start_date, as: :date, html5: true %>
-  <%= f.input :end_date, as: :date, html5: true %>
-  <%= f.submit "Submit Request", class: "btn btn-primary" %>
-<%end%>
+
+<div class="container">
+  <h1>Edit Booking</h1>
+  <%= simple_form_for @booking do |f|%>
+    <%= f.input :start_date, as: :date, html5: true %>
+    <%= f.input :end_date, as: :date, html5: true %>
+    <%= f.submit "Submit Request", class: "btn btn-primary" %>
+  <%end%>
+  <hr>
+  <%= link_to "Back to my bookings", my_bookings_path, class: "btn btn-secondary"%>
+</div>
