--- a/app/views/pages/my_bookings.html.erb
+++ b/app/views/pages/my_bookings.html.erb
@@ -7,8 +7,8 @@
       <h5 class="card-title">Start Date: <%= booking.start_date.strftime("%d-%m-%Y")%></h5>
       <h5 class="card-title">End Date: <%= booking.end_date.strftime("%d-%m-%Y")%></h5>
       <p class="card-text">Booking Request has been made for <%= booking.pet.name%></p>
-      <%= link_to "Edit", edit_booking_path(booking) %>
-      <%= link_to "Delete", booking_path(booking), method: :delete, data: {confirm: "Are you sure you want to delete booking?"}, class: "text-danger"%>
+      <%= link_to "Edit", edit_booking_path(booking), class: "card-link text-warning" %>
+      <%= link_to "Delete", booking_path(booking), method: :delete, data: {confirm: "Are you sure you want to delete booking?"}, class: "text-danger card-link"%>
       </div>
     </div>
     <% end %>
