--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Pets</h1>
 
-<div class="container">
+
+<div class="index-container">
   <div class="cards">
     <% @pets.each do |pet| %>
       <div class="card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/breakfast.jpg)">
@@ -18,5 +19,11 @@
         <% end %>
       </div>
     <% end %>
+  </div>
+  <div class="map-container">
+    <div id="map" style="width: 100%; height: 600px;"
+    data-controller="mapbox"
+    data-mapbox-markers-value="<%= @markers.to_json %>"
+    data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
   </div>
 </div>
