--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,17 @@
 <div class="container position-relative">
   <div class="aboutus"></div>
-  <%= link_to pets_path do%>
-  <div class="entrance"></div>
-  <% end %>
   <div class="contact"></div>
-    <div class="background-building"></div>
+  <% if user_signed_in? %>
+    <%= link_to pets_path do%>
+      <div class="entrance"></div>
+    <% end %>
+    <div class="background-building-signed"></div>
+    <% else %>
+      <%= link_to new_user_session_path do%>
+      <div class="entrance"></div>
+    <% end %>
+    <div class="background-building-not-sign"></div>
+    <% end %>
   </div>
   <div class="clock-block">
     <div class="clock">
