--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -7,7 +7,8 @@
           <div class="fancy-card profile-two">
 
             <div class="fancy-card-image profile-img--two">
-              <img src="https://image.ibb.co/c9rY6J/profile02.jpg" alt="profile two">
+              <%= cl_image_tag @pet.photo.key, height: 300, width: 400, crop: :fill %>
+              <%# <img src="https://image.ibb.co/c9rY6J/profile02.jpg" alt="profile two"> %>
             </div>
 
             <ul class="social-icons">
