Linked the bookings window to MyBookings Page

--- a/app/assets/stylesheets/components/landing/_home-page.scss
+++ b/app/assets/stylesheets/components/landing/_home-page.scss
@@ -55,6 +55,15 @@
   /* red */
 }
 
+
+.bookings {
+position: absolute;
+width: 220px;
+height: 320px;
+left: 745px;
+top: 275px;
+border-radius: 55px 55px 0 0;
+}
 //CLOCK
 
 .clock-block {
