--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,9 @@
     <%= link_to pets_path do%>
       <div class="entrance"></div>
     <% end %>
+    <%= link_to my_bookings_path do %>
+      <div class="bookings"></div>
+    <% end %>
     <div class="background-building-signed"></div>
     <% else %>
       <%= link_to new_user_session_path do%>
