--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,4 +5,5 @@
 @import "button";
 @import "card";
 @import "card-grid";
-@import "landing/home-page"
+@import "landing/home-page";
+@import "profile";
