some styling for bookings pages

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -92,7 +92,7 @@
   }
 
   .fancy-card-image img {
-    object-fit: contain;
+    object-fit: cover;
     width: 100%;
     height: 100%;
     background-color: white;
