--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -6,6 +6,9 @@
     <%= f.input :species %>
     <%= f.input :breed %>
     <%= f.input :description %>
+    <%= f.input :address,
+                input_html: { data: { geocoder_target: "address" }, class: "d-none" },
+                wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } } %>
     <%= f.input :age, as: :integer, input_html: { min: '0', step: 'any' } %>
     <%= f.submit "Rent my pet!", class: "btn btn-primary" %>
   <%end%>
