--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -34,12 +34,14 @@
   font-size: 16px;
   font-weight: bold;
   margin: 0;
+  color: $red;
 }
 
 .card-trip p {
   font-size: 12px;
   opacity: .7;
   margin: 0;
+  color: darkgrey;
 }
 
 .card-trip .card-trip-infos {
