--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,5 +1,6 @@
-<h1>Pets</h1>
-
+<div class="index-container">
+  <h1>Pets</h1>
+</div>
 
 <div class="index-container">
   <div class="cards">
@@ -21,7 +22,7 @@
     <% end %>
   </div>
   <div class="map-container">
-    <div id="map" style="width: 100%; height: 600px;"
+    <div id="map" style="width: 100%; height:100vh;"
     data-controller="mapbox"
     data-mapbox-markers-value="<%= @markers.to_json %>"
     data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"></div>
