clock fixed, navbar and booking links done

--- a/app/assets/stylesheets/components/landing/_home-page.scss
+++ b/app/assets/stylesheets/components/landing/_home-page.scss
@@ -11,6 +11,7 @@
     background-repeat: no-repeat;
     height: 100vh;
 }
+
 .aboutus {
   position: absolute;
   width: 77px;
@@ -67,13 +68,15 @@ border-radius: 55px 55px 0 0;
 //CLOCK
 
 .clock-block {
+  position: absolute;
+  top: 197px;
+  left: 816px;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .clock {
-  position: relative;
-  top: -772px;
-  left: 856px;
   border-radius: 100%;
   background: #ffffff;
   font-family: "Montserrat";
@@ -92,11 +95,11 @@ border-radius: 55px 55px 0 0;
 .minute,
 .hour {
   position: absolute;
-  height: 20px;
+  height: 19px;
   width: 2px;
   margin: auto;
-  top: -30%;
-  left: 0;
+  top: -32%;
+  left: -2px;
   bottom: 0;
   right: 0;
   background: black;
@@ -110,7 +113,7 @@ border-radius: 55px 55px 0 0;
   position: absolute;
   height: 25px;
   width: 2px;
-  top: -35%;
+  top: -36%;
   left: 0;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.4);
   transform: rotate(90deg);
@@ -118,10 +121,10 @@ border-radius: 55px 55px 0 0;
 
 .second {
   position: absolute;
-  height: 20px;
+  height: 25px;
   width: 1px;
   margin: auto;
-  top: -30%;
+  top: -37%;
   left: 0;
   bottom: 0;
   right: 0;
