--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,5 +1,5 @@
-<h1>Pet Profile</h1>
 <div class="container">
+<h1 class="text-center">Pet Profile</h1>
   <div class="row">
     <div class="col-lg-4 col-m-6 col-sm-12">
       <div class="fancy-card-wrapper">
