--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -1,3 +1,3 @@
 <div class="col-8 mx-auto">
-<h1 class="mb-4">Add pet for booking</h1>
+<h1 class="mb-4">Edit pet booking</h1>
 <%= render "form" %>
