--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -10,6 +10,12 @@
   width: 450px;
 }
 
+.index-header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .cards {
   padding: 10px;
   display: grid;
