--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -2,6 +2,7 @@
   <div class="index-header">
     <h1>Pet Profile</h1>
     <%= link_to "Back To Pets", pets_path, class: "btn btn-ghost" %>
+    <%= link_to "Edit Pet", edit_pet_path(@pet), class: "btn btn-ghost" %>
   </div>
 </div>
 <div class="container">
