--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
 
   <body>
   <%= render '/shared/navbar' %>
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
+      <p class="flash flash-warning"><%= notice %></p>
+      <p class="flash flash-success"><%= alert %></p>
     <%= yield %>
   </body>
 </html>
