--- a/app/views/pages/_my_bookings.html.erb
+++ b/app/views/pages/_my_bookings.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="m-2 text-center">My Bookings</h1>
+  <h1 class="mt-5 text-center">My Bookings</h1>
   <div class="cards">
     <% current_user.bookings.each do |booking| %>
       <div class="card-trip" style="width: 18rem;">
