Adding Pricing system according to dates

--- a/app/views/bookings/_new.html.erb
+++ b/app/views/bookings/_new.html.erb
@@ -1,6 +1,11 @@
 <h1>Make Booking</h1>
+<div id="bookings-form">
 <%= simple_form_for [@pet, @booking] do |f|%>
   <%= f.input :start_date, as: :date, html5: true %>
   <%= f.input :end_date, as: :date, html5: true  %>
+  <div class="d-flex">
+  <div>Price: £<div class="d-inline-block" id="total-price"<%= @pet.price%>><%= @pet.price %></div> </div>
+  </div>
   <%= f.submit "Submit Request", class: "btn btn-primary" %>
 <%end%>
+</div>
