--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -20,7 +20,7 @@
                 <h2><%= pet.name %></h2>
                 <p><%= pet.description %></p>
             </div>
-            <h2 class="card-trip-pricing">£99.99</h2>
+            <h2 class="card-trip-pricing"><%= pet.price %></h2>
           </div>
         </div>
         <% end %>
