--- a/app/views/pages/my_dashboard.html.erb
+++ b/app/views/pages/my_dashboard.html.erb
@@ -2,8 +2,12 @@
   <% if current_user.first_name.strip[-1] == "s"%>
   <h1 class="text-center"><%="#{current_user.first_name.strip}'"%> Dashboard</h1>
   <%else%>
-    <h1><%="#{current_user.first_name.strip}'s"%> Dashboard</h1>
-  <%end%>
+    <% if current_user.first_name %>
+      <h1><%="#{current_user.first_name.strip}'s"%> Dashboard</h1>
+    <% else %>
+      <h1>My Dashboard</h1>
+    <%end%>
+  <% end %>
 
   <div class="container">
     <nav>
